samples/_failures_safe/1761359096_f69cc0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4766ff16.c: In function ‘main’:
./samples/SAFE/__tmp_4766ff16.c:183:5: error: expected declaration or statement at end of input
  183 |     printf("Total characters processed: %d\n", context.total_chars);
      |     ^~~~~~
